--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,1 +1,194 @@
-/*# sourceMappingURL=style.css.map */
+/* Abstracts */
+/* CSS Reset by Andy Bell (https://andy-bell.co.uk/a-modern-css-reset/) */
+/* Box sizing rules */
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Remove default margin */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+/* Remove list styles on ul, ol, and li elements with a list role, which suggests default styling will be removed */
+ul[role=list],
+ol[role=list] ul,
+ol,
+li {
+  list-style: none;
+}
+
+/* Set core root defaults */
+html:focus-within {
+  scroll-behavior: smooth;
+}
+
+/* Set core body defaults */
+body {
+  min-height: 100vh;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+}
+
+/* A elements that don't have a class get default styles */
+a:not([class]) {
+  -webkit-text-decoration-skip: ink;
+          text-decoration-skip-ink: auto;
+}
+
+/* Make images easier to work with */
+img,
+picture {
+  max-width: 100%;
+  display: block;
+}
+
+/* Inherit fonts for inputs and buttons */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
+@media (prefers-reduced-motion: reduce) {
+  html:focus-within {
+    scroll-behavior: auto;
+  }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+/* Custom Properties */
+:root {
+  /* Base properties */
+  --gap: 1rem;
+  --radius: 7px;
+  /* Primary Colors, one for fixed color and the other to change opacity dynamically */
+  --clr-primary-green: hsl(75, 94%, 57%);
+  --clr-primary-white: hsl(0, 0%, 100%);
+  --clr-primary-black: hsl(0, 0%, 8%);
+  /* Secondary Colors, one for fixed color and the other to change opacity dynamically */
+  --clr-neutral-grey-700: hsl(0, 0%, 20%);
+  --clr-neutral-grey-800: hsl(0, 0%, 12%);
+  --clr-neutral-grey-900: hsl(0, 0%, 8%);
+  /* RGB colors to change opacity dynamically */
+  --clr-primary-green-rgb: 197, 248, 42;
+  --clr-primary-white-rgb: 255, 255, 255;
+  --clr-neutral-grey-700-rgb: 51, 51, 51;
+  --clr-neutral-grey-800-rgb: 31, 31, 31;
+  --clr-neutral-grey-900-rgb: 20, 20, 20;
+  /* Typography */
+  /* Font Family */
+  --ff-default: "Inter", sans-serif;
+  /* Font Weight */
+  --fw-regular: 400;
+  --fw-semi-bold: 600;
+  --fw-bold: 700;
+  /* Font Sizes */
+  --fs-300: 0.875rem;
+  --fs-400: 1.125rem;
+  --fs-500: 1.25rem;
+  --fs-600: 1.5rem;
+  --fs-700: 1.75rem;
+  --fs-800: 2rem;
+  --fs-850: 3.5rem;
+  --fs-900: 4rem;
+}
+
+/* Components */
+/* Buttons Container Styling */
+.card-button-group {
+  display: flex;
+  flex-direction: column;
+  gap: var(--gap);
+  padding: 0.2rem;
+}
+
+.card-button {
+  background-color: var(--clr-neutral-grey-700);
+  border: none;
+  border-radius: var(--radius);
+  color: var(--clr-primary-white);
+  font-weight: var(--fw-semi-bold);
+  padding: 0.6rem;
+}
+
+/* Layouts */
+/* General Styling */
+body {
+  color: var(--clr-primary-white);
+  background-color: var(--clr-primary-black);
+  font-family: var(--ff-default);
+  font-size: var(--fs-300);
+  text-align: center;
+  display: grid;
+  place-content: center;
+}
+
+/* Visually Hidden for sr-only */
+.visually-hidden {
+  clip: rect(0 0 0 0) !important;
+  -webkit-clip-path: inset(50%) !important;
+          clip-path: inset(50%) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+
+/* Card Styling */
+.card_container {
+  background-color: var(--clr-neutral-grey-800);
+  border-radius: 15px;
+  margin-bottom: var(--gap);
+  padding: var(--gap);
+}
+
+.card-img {
+  border-radius: 50%;
+  max-width: 7rem;
+  margin: auto;
+  padding: var(--gap);
+}
+
+.card-title-group h2 {
+  font-weight: var(--fw-semi-bold);
+  letter-spacing: 0.5px;
+}
+.card-title-group span {
+  color: var(--clr-primary-green);
+  font-size: 0.75rem;
+  font-weight: var(--fw-semi-bold);
+  letter-spacing: 0.5px;
+}
+
+.card-contents-paragraph {
+  font-size: 0.8rem;
+  margin: var(--gap);
+}
+
+.attribution {
+  font-size: 0.625rem;
+}
+.attribution a {
+  color: var(--clr-primary-green);
+}/*# sourceMappingURL=style.css.map */
