Add button active styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -129,6 +129,14 @@ select {
   color: var(--clr-primary-white);
   font-weight: var(--fw-semi-bold);
   padding: 0.6rem;
+  cursor: pointer;
+}
+.card-button:hover {
+  background-color: rgba(var(--clr-neutral-grey-700-rgb), 0.5);
+}
+.card-button:active {
+  background-color: var(--clr-primary-green);
+  color: var(--clr-primary-black);
 }
 
 /* Layouts */
